--- a/style.css
+++ b/style.css
@@ -6,8 +6,16 @@ h2 {
     font-size: 150px;
 }
 
+h3 {
+    font-size: 100px;
+}
+
 h4 {
     font-size: 80px;
+}
+
+p {
+    font-size: 70px;
 }
 
 b {
@@ -51,17 +59,56 @@ section {
     text-align: center;
 }
 
-.amount {
-    cursor: pointer;
-    overflow: hidden;
-    outline: none;
-    height: 38px;
-    line-height: 40px;
-    border: 2px solid b;
-    display: inline-block;
-    float: none;
+.full-plan img {
+    width: 10%;
+}
+
+.full-plan p {
+    font-size: 60px;
+}
+
+.plan {
+    width: 50%;
+    float: left;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-right: 2%;
+    padding-left: 2%;
+    padding-top: 2%;
+}
+
+#food {
+    background-color: #e0f3f4;
+}
+
+#shelter {
+    background-color: #ede0f4;
+}
+
+#educat {
+    background-color: #f4e0e0;
+}
+
+.contribute-width {
+    width: 50%;
+    float: left;
+    margin-left: 10%;
+    padding-left: 2%;
+    padding-top: 5%;
+}
+
+.contribute-img {
+    width: 30%;
+    float: right;
+    margin-top: 5%;
+}
+
+.anchor-button {
+    text-decoration: none;
+    background-image: linear-gradient(palegreen, rgb(19, 211, 77));
+    padding: 20px 50px;
+    border-radius: 10px;
     text-align: center;
-    width: 120px;
-    padding: 0px;
-    font-size: 14px;
+    color: black;
+    font-size: 70px;
 }
