--- a/style.css
+++ b/style.css
@@ -1,29 +1,29 @@
 h1 {
-    font-size: 200px;
-}
-
-h2 {
-    font-size: 150px;
-}
-
-h3 {
     font-size: 100px;
 }
 
+h2 {
+    font-size: 75px;
+}
+
+h3 {
+    font-size: 50px;
+}
+
 h4 {
-    font-size: 80px;
+    font-size: 40px;
 }
 
 p {
-    font-size: 70px;
+    font-size: 35px;
 }
 
 b {
-    font-size: 60px;
+    font-size: 30px;
 }
 
 strong {
-    font-size: 80px;
+    font-size: 40px;
     background-image: linear-gradient(palegreen, rgb(19, 211, 77));
     padding: 0px 40px;
     border-radius: 10px;
@@ -34,15 +34,17 @@ strong {
     color: rgb(255, 0, 149);
 }
 
-section {
+.split-comp {
     display: flex;
 }
+
 
 .text {
     color: black;
     text-align: right;
     padding: 10% 5%;
 }
+
 
 .half-width {
     width: 50%;
@@ -57,14 +59,18 @@ section {
 
 .center {
     text-align: center;
+    padding-left: 30%;
+    padding-right: 30%;
 }
+
+
 
 .full-plan img {
     width: 10%;
 }
 
 .full-plan p {
-    font-size: 60px;
+    font-size: 30px;
 }
 
 .plan {
@@ -110,5 +116,18 @@ section {
     border-radius: 10px;
     text-align: center;
     color: black;
-    font-size: 70px;
+    font-size: 35px;
+}
+
+.price-button {
+
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+
 }
