--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ h4 {
 }
 
 p {
-    font-size: 35px;
+    color: gray;
+    font-size: 25px;
 }
 
 b {
@@ -23,12 +24,19 @@ b {
 }
 
 strong {
-    font-size: 40px;
+    font-size: 35px;
+
+}
+
+.donate-icon {
     background-image: linear-gradient(palegreen, rgb(19, 211, 77));
-    padding: 0px 40px;
+    padding: 10px 40px;
     border-radius: 10px;
     text-align: center;
+    margin-top: 10px;
 }
+
+
 
 .color {
     color: rgb(255, 0, 149);
@@ -36,13 +44,20 @@ strong {
 
 .split-comp {
     display: flex;
+
 }
 
 
-.text {
-    color: black;
+.text-right {
     text-align: right;
-    padding: 10% 5%;
+    padding: 2% 5%;
+    margin-top: 10px;
+
+}
+
+.header-text {
+    text-align: right;
+    padding: 2% 5%;
 }
 
 
@@ -50,10 +65,11 @@ strong {
     width: 50%;
     padding-left: 5%;
     background-color: #E0EAF4;
+
 }
 
 .half-width img {
-    width: 70%;
+    width: 80%;
     padding-top: 10%;
 }
 
@@ -96,17 +112,20 @@ strong {
 }
 
 .contribute-width {
-    width: 50%;
+    width: 40%;
     float: left;
     margin-left: 10%;
-    padding-left: 2%;
-    padding-top: 5%;
 }
 
 .contribute-img {
     width: 30%;
     float: right;
-    margin-top: 5%;
+    margin-top: 2%;
+    margin-right: 15%;
+}
+
+.margin-button-top {
+    margin-top: 20px;
 }
 
 .anchor-button {
@@ -121,13 +140,68 @@ strong {
 
 .price-button {
 
-    color: white;
-    padding: 15px 32px;
+    color: black;
+    background-color: rgb(202, 197, 197);
+    padding: 40px 32px;
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
+    font-size: 24px;
+    font-weight: bold;
+    margin-left: 5px;
+    margin-right: 5px;
+    border: none;
 
+}
+
+.price-button-selected {
+
+    color: red;
+    padding: 45px 35px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-color: red;
+    border-width: 4px;
+
+}
+
+.edit-text {
+    margin-top: 50px;
+    font-size: 25px;
+    border: none;
+    outline: none;
+}
+
+.edit-email {
+    font-size: 20px;
+    border: none;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    background-color: rgb(224, 215, 215);
+    border-radius: 10px;
+}
+
+.edit-sub-button {
+    font-size: 20px;
+    border: none;
+    background-color: aqua;
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+
+.fot {
+    background-color: black;
+}
+
+.fot-ic {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 35px;
+    color: rgb(231, 120, 101);
+}
+
+.fot-las {
+    font-size: 20px;
 }
