--- a/style.css
+++ b/style.css
@@ -1,30 +1,22 @@
 h1 {
-    font-size: 100px;
+    font-size: 85px;
 }
 
 h2 {
-    font-size: 75px;
-}
-
-h3 {
     font-size: 50px;
 }
 
-h4 {
-    font-size: 40px;
+h3 {
+    font-size: 35px;
 }
 
 p {
     color: gray;
-    font-size: 25px;
-}
-
-b {
-    font-size: 30px;
+    font-size: 20px;
 }
 
 strong {
-    font-size: 35px;
+    font-size: 25px;
 
 }
 
@@ -38,11 +30,11 @@ strong {
 
 
 
-.color {
+.colorford {
     color: rgb(255, 0, 149);
 }
 
-.split-comp {
+.for-flex {
     display: flex;
 
 }
@@ -51,7 +43,6 @@ strong {
 .text-right {
     text-align: right;
     padding: 2% 5%;
-    margin-top: 10px;
 
 }
 
@@ -86,7 +77,7 @@ strong {
 }
 
 .full-plan p {
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .plan {
@@ -112,8 +103,9 @@ strong {
 }
 
 .contribute-width {
-    width: 40%;
+    width: 30%;
     float: left;
+    margin-top: 5%;
     margin-left: 10%;
 }
 
@@ -128,14 +120,22 @@ strong {
     margin-top: 20px;
 }
 
-.anchor-button {
-    text-decoration: none;
-    background-image: linear-gradient(palegreen, rgb(19, 211, 77));
-    padding: 20px 50px;
+.donate-button {
+    font-size: 20px;
+    border: none;
+    background-color: aqua;
+    padding: 10px 20px;
     border-radius: 10px;
-    text-align: center;
+}
+
+.anchor-button {
     color: black;
-    font-size: 35px;
+    text-decoration: none;
+    font-size: 25px;
+    border: none;
+    background-color: aqua;
+    padding: 10px 20px;
+    border-radius: 10px;
 }
 
 .price-button {
@@ -144,7 +144,7 @@ strong {
     background-color: rgb(202, 197, 197);
     padding: 40px 32px;
     text-align: center;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
     margin-left: 5px;
     margin-right: 5px;
@@ -157,7 +157,7 @@ strong {
     color: red;
     padding: 45px 35px;
     text-align: center;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
     margin-left: 5px;
     margin-right: 5px;
@@ -167,14 +167,15 @@ strong {
 }
 
 .edit-text {
+    text-align: center;
     margin-top: 50px;
-    font-size: 25px;
+    font-size: 20px;
     border: none;
     outline: none;
 }
 
 .edit-email {
-    font-size: 20px;
+    font-size: 15px;
     border: none;
     padding-left: 10px;
     padding-top: 10px;
@@ -185,7 +186,7 @@ strong {
 }
 
 .edit-sub-button {
-    font-size: 20px;
+    font-size: 15px;
     border: none;
     background-color: aqua;
     padding: 10px 20px;
@@ -194,14 +195,17 @@ strong {
 
 .fot {
     background-color: black;
+    padding: 20px 10px;
+    margin-top: 10px;
 }
 
 .fot-ic {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 35px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 25px;
     color: rgb(231, 120, 101);
 }
 
 .fot-las {
     font-size: 20px;
+    color: rgb(146, 235, 235);
 }
